--- a/src/.env.example
+++ b/src/.env.example
@@ -5,7 +5,7 @@ APP_DEBUG=true
 APP_TIMEZONE=Asia/Kolkata
 APP_URL=http://localhost:5071
 
-APP_LOCALE=en
+APP_LOCALE=INR
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
