--- a/src/.env.testing
+++ b/src/.env.testing
@@ -1,13 +1,15 @@
 APP_NAME="Squad Up"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:shDQcmcUGoCKoWafuF5S1xmUU1+VWz45ropI0M9Mxok=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Kolkata
 APP_URL=http://localhost:5071
 
-APP_LOCALE=INR
+APP_LOCALE=en_IN
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
+
+APP_CURRENCY=INR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -26,7 +28,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=squad-up-db-1
 DB_PORT=3306
-DB_DATABASE=squad-up
+DB_DATABASE=squad-up-testing
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -68,3 +70,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 ADMIN_PANEL_LOCAL_LOGIN_EMAILS="admin@test.dev,user@test.dev"
+USER_PANEL_LOCAL_LOGIN_EMAILS="admin@test.dev,user@test.dev"
