--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "better-futures-studio/filament-local-logins": "^1.2",
+        "codewithdennis/filament-simple-alert": "^3.0",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
