--- a/src/.env.example
+++ b/src/.env.example
@@ -4,6 +4,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=Asia/Kolkata
 APP_URL=http://localhost:5071
+APP_DOMAIN=
 
 APP_LOCALE=INR
 APP_FALLBACK_LOCALE=en
