--- a/src/.env.example
+++ b/src/.env.example
@@ -66,6 +66,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+WHATSAPP_ACCESS_TOKEN=
+WHATSAPP_PHONE_NUMBER_ID=
+WHATSAPP_BUSINESS_ACCOUNT_ID=
+
 VITE_APP_NAME="${APP_NAME}"
 
 ADMIN_PANEL_LOCAL_LOGIN_EMAILS="admin@test.dev,user@test.dev"
