--- a/src/.env.example
+++ b/src/.env.example
@@ -68,4 +68,9 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+ADMIN_NAME=
+ADMIN_NUMBER=
+ADMIN_WHATSAPP_NUMBER=
+ADMIN_EMAIL=
+
 ADMIN_PANEL_LOCAL_LOGIN_EMAILS="admin@test.dev,user@test.dev"
