Feat: Builds Enquiry

--- a/src/composer.json
+++ b/src/composer.json
@@ -11,6 +11,7 @@
         "codewithdennis/filament-simple-alert": "^3.0",
         "filament/filament": "^3.2",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "spatie/laravel-permission": "^6.10",
         "spatie/laravel-settings": "^3.4",
